<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_setup.ProfileGenderMore">

    <ProgressBar
        android:id="@+id/progressBar_p4_2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:progress="44" />

    <EditText
        android:id="@+id/text_p4_2"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:layout_below="@id/progressBar_p4_2"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:ems="10"
        android:hint="@string/more_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/please_specify_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_p4_2"
        android:layout_alignStart="@id/text_p4_2"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/please_specify"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/use_only_letters_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_p4_2"
        android:layout_alignStart="@id/text_p4_2"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/please_use_only_letters"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_p4_2"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:onClick="startProfileOrientation"
        android:text="@string/continue_str"
        app:shapeAppearanceOverlay="@style/PillShapeButton" />
</RelativeLayout>