<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".profile_setup.ProfileName">

    <ProgressBar
        android:id="@+id/progressBar_p2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:progress="11" />

    <TextView
        android:id="@+id/text_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_below="@id/progressBar_p2"
        android:text="@string/my_first_name_is"
        android:textColor="#000000"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/text_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/text_p2"
        android:maxLength="24"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/warning3_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_first_name"
        android:layout_alignStart="@id/text_first_name"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/please_use_only_letters"
        android:textColor="#FF0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warning1_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_first_name"
        android:layout_alignStart="@id/text_first_name"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/name_can_t_be_less_than_2_characters"
        android:textColor="#FA0000"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/warning2_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_can_t_be_more_than_20_characters"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_below="@id/text_first_name"
        android:layout_alignStart="@id/text_first_name"
        android:layout_marginTop="@dimen/margin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_p2"
        android:layout_width="@dimen/pill_shape_width"
        android:layout_height="@dimen/pill_shape_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:onClick="startProfileBirthday"
        android:text="@string/continue_str"
        app:shapeAppearanceOverlay="@style/PillShapeButton" />
</RelativeLayout>